<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="elk_authority">ru.mos.polls.elk.AUTHORITY</string>
    <string name="polls_authority">ru.mos.polls.AUTHORITY</string>
    <string name="ag_flurry_key">VV5TTMG3MDZ8HZBH9M6V</string>
    <string name="app_name">Активный гражданин</string>
    <string name="app_name_short">Гражданин</string>
    <string name="polls_finished">Пройденные</string>
    <string name="polls_active">Активные</string>
    <string name="polls">Вопросы</string>
    <string name="profile">Мой профиль</string>
    <string name="about">О приложении</string>
    <string name="my_points">Мои баллы</string>
    <string name="elk_flat">Адрес</string>
    <string name="elk_succeeded_add_flat">Адрес добавлен</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_comment_add">Добавить комментарий</string>
    <string name="action_comment_send">Опубликовать комментарий</string>
    <string name="poll_interrupt">Прервать</string>
    <string name="poll_next_question">Следующий вопрос</string>
    <string name="poll_finish">Отправить результаты</string>
    <string name="cant_load">Загрузка не удалась. %s</string>
    <string name="points_history">История начислений и оплаты</string>
    <string name="interrupted">закончите голосование</string>
    <string name="offer">&lt;a href=\"http://ag.mos.ru/oferta.html\">Договор оферты&lt;/a></string>
    <string name="tech_support">Обратная связь</string>
    <string name="our_apps">Наши приложения</string>
    <string name="our_apps_uppercase">НАШИ ПРИЛОЖЕНИЯ</string>
    <string name="dev_not_implemented">Not implemented yet</string>
    <string name="e_version_info_not_available">Данные о номере версии недоступны</string>
    <string name="app_version_template">v. %1$s</string>
    <string name="email">E-mail</string>
    <string name="contact_info">Контактная информация</string>
    <string name="message_text">Текст сообщения</string>
    <string name="sendMessage">Отправить</string>
    <string name="succeeded_support">Сообщение успешно отправлено.</string>
    <string name="cant_send_support">Не удалось отправить сообщение в службу техподдержки.  Причина: %s</string>
    <string name="user_version">1.8.1</string>
    <string name="good">Хорошо</string>
    <string name="statistics">Статистика</string>
    <string name="points_earned">Заработано баллов:</string>
    <string name="points_spent">Потрачено баллов:</string>
    <string name="points_lost">Сгорело баллов:</string>
    <string name="current_balance">Текущий баланс:</string>
    <string name="point_history_is_empty">История начислений и оплаты пуста</string>
    <string name="help_startup_continue">Продолжить</string>
    <string name="help_startup_message_title">Добро пожаловать в приложение «Активный гражданин»</string>
    <string name="help_startup_message_text">Участвуйте в голосованиях и зарабатывайте баллы.\n\nДля получения дополнительных баллов выполняйте специальные задания.\n\nРасскажите друзьям и получите дополнительные баллы. Сделаем наш город лучше!</string>
    <string name="survey_done_ok">OK</string>
    <string name="ag_personal_data">Профиль</string>
    <string name="save">Сохранить</string>
    <string name="allow_personal_process">Я согласен на обработку моих персональных данных</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="middlename">Отчество</string>
    <string name="gender">Пол</string>
    <string name="birthdate">Дата рождения</string>
    <string name="hint_lastname">Ваша фамилия</string>
    <string name="hint_firstname">Ваше имя</string>
    <string name="hint_middlename">Ваше отчество</string>
    <string name="hint_gender">Ваш пол</string>
    <string name="hint_birthdate">Укажите дату рождения</string>
    <string name="hint_email">Ваша электронная почта</string>
    <string name="auth">Авторизация</string>
    <string name="update_location_activity">Место жительства</string>
    <string name="maritalStatus">Семейное положение</string>
    <string name="childrenCount">Количество детей</string>
    <string name="addresses">Список адресов</string>
    <string name="point_var_1">балл</string>
    <string name="point_var_2">баллов</string>
    <string name="point_var_3">балла</string>
    <string name="residenceAddress">Адрес проживания</string>
    <string name="registrationAddress">Адрес регистрации</string>
    <string name="addFlat">Добавить адрес</string>
    <string name="offer_accepted">Я принимаю условия оферты</string>
    <string name="offer_request">Договор оферты</string>
    <string name="close">Закрыть</string>
    <string name="survey_question_info_simple">Введите ответ:</string>
    <string name="web_shop">Потратить баллы</string>
    <string-array name="socials">
        <item>Facebook</item>
        <item>ВКонтакте</item>
        <item>Twitter</item>
        <item>Одноклассники</item>
        <item>Google+</item>
    </string-array>
    <string name="gorod_select_title">Поиск</string>
    <string name="service_select_title">Поиск</string>
    <string name="social_vk">ВКонтакте</string>
    <string name="social_fb">Facebook</string>
    <string name="social_tw">Twitter</string>
    <string name="social_ok">Одноклассники</string>
    <string name="empty_passedpolls_hint">Вы не приняли участия ни в одном голосовании</string>
    <string name="empty_activepolls_hint">Новые голосования появятся в ближайшее время</string>
    <string name="empty_housepolls_hint">В вашем доме пока не проходит никаких голосований.\n\nДобавьте адреса проживания, регистрации и собственности, чтобы не пропустить голосования.</string>
    <string name="below_house_addresses_hint">Голосования для жильцов дома доступны по указанным в профиле адресам регистрации или проживания.\n\nДля участия в голосованиях собственников необходимо указать адреса собственности и связать профиль с профилем на mos.ru</string>
    <string name="empty_point_history"> </string>
    <string name="question_count_1" formatted="false">%s вопрос</string>
    <string name="question_count_2" formatted="false">%s вопросов</string>
    <string name="question_count_3" formatted="false">%s вопроса</string>
    <string name="questions">Вопросы</string>
    <string name="refresh">Обновить</string>
    <string name="action_home">Место жительства</string>
    <string name="action_quit">Выход</string>
    <string name="action_change_password">Изменить пароль</string>
    <string name="ag_hint_phone_email">Ваш телефон (10 цифр)</string>
    <string name="elk_authorization">Вход</string>
    <string name="elk_restoreTitle">Восстановление пароля</string>
    <string name="ag_auth_title">Ваш телефон</string>
    <string name="marital_non_select_item_title">Семейное положение</string>
    <string name="gender_non_select_item_title">Пол</string>
    <string name="social_status_non_select_item_title">Род деятельности</string>
    <string name="ag_agree_offer_link">Я согласен с
        &lt;a href="http://ag.mos.ru/oferta.html" style="text-decoration: none;">условиями оферты&lt;/a></string>
    <string-array name="genders">
        <item>Не установлено</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string-array name="marital_statuses">
        <item>Холост\\Не замужем</item>
        <item>Женат\\Замужем</item>
    </string-array>
    <string-array name="marital_statuses_for_male">
        <item>Холост</item>
        <item>Женат</item>
    </string-array>
    <string-array name="marital_statuses_for_female">
        <item>Не замужем</item>
        <item>Замужем</item>
    </string-array>
    <string-array name="child_birthdays_hint">
        <item>Первый ребенок</item>
        <item>Второй ребенок</item>
        <item>Третий ребенок</item>
        <item>Четвертый ребенок</item>
        <item>Пятый ребенок</item>
        <item>Шестой ребенок</item>
        <item>Седьмой ребенок</item>
        <item>Восьмой ребенок</item>
        <item>Девятый ребенок</item>
        <item>Десятый ребенок</item>
        <item>Одиннадцатый ребенок</item>
        <item>Двенадцатый ребенок</item>
        <item>Тринадцатый ребенок</item>
        <item>Четырнадцатый ребенок</item>
        <item>Пятнадцатый ребенок</item>
    </string-array>
    <string name="elk_register">Регистрация</string>
    <string name="elk_hint_phone">Номер Вашего телефона</string>
    <string name="not_filled">Не заполнено</string>
    <string name="cancel">Отмена</string>
    <string name="push">Push</string>
    <string name="poll_new">Оповещать меня о новых голосованиях</string>
    <string name="empty" />
    <string name="mainmenu_quests">Активный гражданин</string>
    <string name="mainmenu_polls">Голосования</string>
    <string name="mainmenu_novelty">Городские новинки</string>
    <string name="mainmenu_news">Новости</string>
    <string name="mainmenu_shop">Магазин поощрений</string>
    <string name="mainmenu_my_points">Мои баллы</string>
    <string name="mainmenu_profile">Мой профиль</string>
    <string name="mainmenu_settings">Настройки</string>
    <string name="mainmenu_support">Справка/Отзыв</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="auth_title">Войти</string>
    <string name="subject_support">Тема сообщения</string>
    <string name="help">Нужна помощь?</string>
    <string name="pgu_auth_message">Для того, чтобы участвовать в публичных слушаниях или других юридически значимых голосованиях, вы должны иметь верифицированный адрес регистрации.\n\nУстановите связь с вашим профилем на mos.ru для проверки наличия верифицированного адреса регистрации.</string>
    <string name="pgu_hint_email">Логин (СНИЛС\\Телефон\\Почта)</string>
    <string name="pgu_hint_password">Пароль</string>
    <string name="child">Года рождения</string>
    <string name="pgu_bind">Связать</string>
    <string name="hint_not_auth_pgu">Мы не сохраняем пароль и используем его только для установки связи между профилями</string>
    <string name="childBirthday">Год рождения ребенка</string>
    <string name="child_birthdays_not_set">не указаны</string>
    <string name="verify">Установить связь</string>
    <string name="pgu_verify_descriprion">Введенный псевдоним и пароль используется только для связывания учетных записей и не сохраняется в системе</string>
    <string name="password_confirm">Установка пароля</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="repeat_password">Повтор пароля</string>
    <string name="password">Пароль</string>
    <string name="hint_about_password">Длина пароля 5 и более символов, используйте только латинские буквы и цифры</string>
    <string name="repeat_code_again">Запросить код еще раз</string>
    <string name="order_number_title_text">Номер заказа</string>
    <string name="order_number_hint">Введите номер</string>
    <string name="ag_not_right_number_or_pass">Неверный номер телефона или пароль</string>
    <string name="your_message">Ваше сообщение</string>
    <string name="ag_hint_code">Код</string>
    <string name="code_confirm_send">Подтвердить</string>
    <string name="help_phone_not_correct">Неправильный номер?</string>
    <string name="hint_sms_sent">Мы отправили SMS с паролем на ваш номер</string>
    <string name="mainmenu_friends">Мои друзья</string>
    <string name="elk_password">Пароль</string>
    <string name="elk_authorize">Войти</string>
    <string name="elk_restoreBtn">Восстановить</string>
</resources>