<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/item.linear"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <!--ФИО-->
    <LinearLayout
        style="@style/item.linear"
        android:background="@drawable/background_text_field"
        android:padding="@dimen/pd_xsmall">

        <TextView
            style="@style/text.green"
            android:text="@string/lastname"/>

        <EditText
            android:id="@+id/lastname"
            style="@style/input.cap"
            android:hint="@string/hint_lastname"/>

        <TextView
            style="@style/text.green"
            android:text="@string/firstname"/>

        <EditText
            android:id="@+id/firstname"
            style="@style/input.cap"
            android:hint="@string/hint_firstname"/>

        <TextView
            style="@style/text.green"
            android:text="@string/middlename"/>

        <EditText
            android:id="@+id/middlename"
            style="@style/input.cap"
            android:hint="@string/hint_middlename"/>
    </LinearLayout>
    <!--Пол, дата рождения-->
    <LinearLayout
        style="@style/item.linear"
        android:background="@drawable/background_text_field"
        android:padding="@dimen/pd_xsmall">

        <TextView
            style="@style/text.green"
            android:text="@string/gender"/>

        <Spinner
            android:id="@+id/gender"
            style="@style/item.linear"
            android:entries="@array/genders"
            android:hint="@string/hint_gender"/>

        <TextView
            style="@style/text.green"
            android:text="@string/birthdate"/>

        <TextView
            android:id="@+id/tvBirthDate"
            style="@style/text.normal.black"
            android:layout_width="match_parent"
            android:background="@drawable/ag_list_selector"
            android:hint="@string/hint_birthdate"
            android:paddingBottom="@dimen/pd_xxsmall"
            android:paddingTop="@dimen/pd_xsmall"/>
    </LinearLayout>
</LinearLayout>
