<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/root.padding"
    android:id="@+id/scrollView"
    android:fillViewport="true">

    <LinearLayout
        style="@style/linear">

        <include layout="@layout/layout_auth_logo"/>

        <TextView
            style="@style/header.green"
            android:text="@string/elk_restoreTitle" />

        <EditText
            style="@style/input.phone"
            android:id="@+id/etPhoneNumber"
            android:hint="@string/elk_hint_phone"
            android:imeActionId="@+id/actionLogin"
            />

        <Button
            android:id="@+id/btnAction"
            style="@style/button.centered"
            android:layout_gravity="center"
            android:layout_width="@dimen/vs_xxxlarge"
            android:text="@string/elk_restoreBtn"
            android:layout_marginTop="@dimen/pd_xsmall"/>

        <TextView
            style="@style/text.center.red"
            android:id="@+id/tvError"
            />

        <TextView
            android:id="@+id/cancel"
            style="@style/text.link.green"
            android:text="@string/cancel" />

        <include layout="@layout/layout_empty_view"/>

        <include layout="@layout/layout_help" />

    </LinearLayout>

</ScrollView>
